--- a/frontend_templates/base.html
+++ b/frontend_templates/base.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark fixed-top" style="background: #d4d4ff">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark fixed-top" style="background: #d4d4ff; max-height: 5vh;">
       <div class="container-fluid">
         <a class="navbar-brand" href="/" style="color: #7373fd; font-weight: bold;"><img src="{% static 'images/icon.png' %}" width="24" height="24" style="margin-right: .3vw; margin-bottom: .5vh;">Encompass Interviews</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
