--- a/frontend_templates/interview_q_instance/answer.html
+++ b/frontend_templates/interview_q_instance/answer.html
@@ -12,6 +12,7 @@
     {% csrf_token %}
       <div class="col-md-12 time-section">
         <h3 class="question-title">{{ question.base_question.name }}</h3>
+        <p class="instructions">Please modify the stub files below and press the Submit Code button when finished.</p>
         {% if is_preview %}
         {% else %}
           {% if has_expiration %}
@@ -26,16 +27,16 @@
               <p class="file-name">File: </p><select class="select-css" id="file-drop-down-one" >
                   {% for opt_group in opt_groups %} 
                     <optgroup label="{{ opt_group }}">
-                      {% if opt_group == 'Question' %}
+                      {% if opt_group == 'Question (Not Modifiable)' %}
                         <option value="Question Description">Question Description</option>
-                      {% elif opt_group == 'Stub Files' %}
+                      {% elif opt_group == 'Stub Files (Modifiable)' %}
                         {% for filename in files_to_work_on_names %}
                           <option value="{{ filename }}">{{ filename }}</option>
                         {% endfor %}
-                      {% elif opt_group == 'API' %}
+                      {% elif opt_group == 'API (Not Modifiable)' %}
                         <option value="API Description">API Description</option>
                         <option value="API Methods">API Methods</option>
-                      {% elif opt_group == 'Example Code' %}
+                      {% elif opt_group == 'Example Code (Not Modifiable)' %}
                         {% for filename in example_files_names %}
                           <option value="{{ filename }}">{{ filename }}</option>
                         {% endfor %}
@@ -62,16 +63,16 @@
               <p class="file-name">File: </p><select class="select-css" id="file-drop-down-two">
                   {% for opt_group in opt_groups %} 
                     <optgroup label="{{ opt_group }}">
-                      {% if opt_group == 'Question' %}
+                      {% if opt_group == 'Question (Not Modifiable)' %}
                         <option value="Question Description">Question Description</option>
-                      {% elif opt_group == 'Stub Files' %}
+                      {% elif opt_group == 'Stub Files (Modifiable)' %}
                         {% for filename in files_to_work_on_names %}
                           <option value="{{ filename }}">{{ filename }}</option>
                         {% endfor %}
-                      {% elif opt_group == 'API' %}
+                      {% elif opt_group == 'API (Not Modifiable)' %}
                         <option value="API Description">API Description</option>
                         <option value="API Methods">API Methods</option>
-                      {% elif opt_group == 'Example Code' %}
+                      {% elif opt_group == 'Example Code (Not Modifiable)' %}
                         {% for filename in example_files_names %}
                           <option value="{{ filename }}">{{ filename }}</option>
                         {% endfor %}
@@ -129,7 +130,7 @@
 <script src="https://pagecdn.io/lib/ace/1.4.5/ace.js" integrity="sha256-5Xkhn3k/1rbXB+Q/DX/2RuAtaB4dRRyQvMs83prFjpM="
   crossorigin="anonymous"></script>
 <script type='text/javascript'>
-    var themeData=["textmate","chrome","clouds","dawn","dreamweaver","eclipse","github","iplastic","tomorrow","xcode","sqlserver","ambiance","gruvbox","chaos","clouds_midnight","cobalt","gob","idle_fingers","kr_theme","merbivore","merbivore_soft","mono_industrial","monokai","pastel_on_dark","solarized_dark","terminal","tomorrow_night","tomorrow_night_blue","tomorrow_night_bright","tomorrow_night_eighties","twilight","vibrant_ink"];$.each(themeData,function(i,item){$('#theme-one').append($('<option>',{value:item,text:item}));$('#theme-two').append($('<option>',{value:item,text:item}))});$.fn.extend({toggleText:function(a,b){return this.text(this.text()==b?a:b)}});$('#toggle_sidebar').click(function(){$("#content-one").toggleClass("collapsed");$("#content-two").toggleClass("col-md-12 col-md-9");$("#toggle_sidebar").toggleText('<','+')});var name_to_body={};var starter_code_bodies={{files_to_work_on_bodies|safe}};var starter_code_names={{files_to_work_on_names|safe}};var example_name_to_body={};var example_code_bodies={{example_files_bodies|safe}};var example_code_names={{example_files_names|safe}};var currently_selected_file_one=$("#file-drop-down-one option:selected").text();var currently_selected_file_two=$("#file-drop-down-two option:selected").text();function initSetUpStarterFiles(){var starter_index=0;$("#file-drop-down-one option").each(function(){if(starter_code_names.includes(this.text)){name_to_body[this.text]=starter_code_bodies[starter_index];var input=document.createElement("input");input.setAttribute("type","hidden");input.setAttribute("name","file_"+this.text);input.setAttribute("id","file_"+this.text);input.setAttribute("value",starter_code_bodies[starter_index]);document.getElementById("file_contents").appendChild(input);starter_index=starter_index+1}})}
+    var themeData=["textmate","chrome","clouds","dawn","dreamweaver","eclipse","github","iplastic","tomorrow","xcode","sqlserver","ambiance","gruvbox","chaos","clouds_midnight","cobalt","gob","idle_fingers","kr_theme","merbivore","merbivore_soft","mono_industrial","monokai","pastel_on_dark","solarized_dark","terminal","tomorrow_night","tomorrow_night_blue","tomorrow_night_bright","tomorrow_night_eighties","twilight","vibrant_ink"];$.each(themeData,function(i,item){$('#theme-one').append($('<option>',{value:item,text:item}));$('#theme-two').append($('<option>',{value:item,text:item}))});$.fn.extend({toggleText:function(a,b){return this.text(this.text()==b?a:b)}});$('#toggle_sidebar').click(function(){$("#content-one").toggleClass("collapsed");$("#content-two").toggleClass("col-md-12 col-md-9");$("#toggle_sidebar").toggleText('<','+')});var name_to_body={};var starter_code_bodies={{files_to_work_on_bodies|safe}};var starter_code_names={{files_to_work_on_names|safe}};var example_name_to_body={};var example_code_bodies={{example_files_bodies|safe}};var example_code_names={{example_files_names|safe}};$("#file-drop-down-two").val(starter_code_names[0]);var currently_selected_file_one=$("#file-drop-down-one option:selected").text();var currently_selected_file_two=$("#file-drop-down-two option:selected").text();function initSetUpStarterFiles(){var starter_index=0;$("#file-drop-down-one option").each(function(){if(starter_code_names.includes(this.text)){name_to_body[this.text]=starter_code_bodies[starter_index];var input=document.createElement("input");input.setAttribute("type","hidden");input.setAttribute("name","file_"+this.text);input.setAttribute("id","file_"+this.text);input.setAttribute("value",starter_code_bodies[starter_index]);document.getElementById("file_contents").appendChild(input);starter_index=starter_index+1}})}
 function initSetUpExampleFiles(){var example_index=0;$("#file-drop-down-one option").each(function(){if(example_code_names.includes(this.text)){example_name_to_body[this.text]=example_code_bodies[example_index];example_index=example_index+1}})}
 function initQuestionSetup(){name_to_body["Question Description"]=`{{ question_description | markdown | safe}}`}
 function initAPISetup(){name_to_body["API Description"]=`{{ api_description | markdown  | safe}}`;name_to_body["API Methods"]=`{{ api_methods | safe}}`}
@@ -144,25 +145,25 @@ if(currently_selected_file_one==currently_selected_file_two){if(code_editor_one.
 setUpOnChangeForEditorTwo();var test_case_editor=textarea_edit_test_case("test_case_editor");var example_code_snippets=document.getElementsByClassName('example_code_view');for(var i=0;i<example_code_snippets.length;++i){var example_code=example_code_snippets[i];var editor=ace.edit(example_code.id);editor.setTheme("ace/theme/textmate");editor.session.setMode("ace/mode/python");editor.setOptions({"showPrintMargin":!1,fontSize:"12pt"});editor.setReadOnly(!0);editor.setOptions({maxLines:15})}
 function onSelectNewThemeOne(){var theme=$("#theme-one").val();code_editor_one.setTheme("ace/theme/"+theme)}
 function onSelectNewThemeTwo(){var theme=$("#theme-two").val();code_editor_two.setTheme("ace/theme/"+theme)}
-code_editor_two.setValue(name_to_body[currently_selected_file_two].toString(),-1);$('#file-drop-down-one').change(function(){var selected=$(':selected',this);var opt_group=selected.parent().attr('label');if(opt_group==="Question"){if(code_editor_one!==null){code_editor_one.destroy()}
-$("#editor_one").html(name_to_body["Question Description"])}else if(opt_group==="Stub Files"){if(code_editor_one!==null){code_editor_one.destroy()}
+code_editor_two.setValue(name_to_body[currently_selected_file_two].toString(),-1);$('#file-drop-down-one').change(function(){var selected=$(':selected',this);var opt_group=selected.parent().attr('label');if(opt_group==="Question (Not Modifiable)"){if(code_editor_one!==null){code_editor_one.destroy()}
+$("#editor_one").html(name_to_body["Question Description"])}else if(opt_group==="Stub Files (Modifiable)"){if(code_editor_one!==null){code_editor_one.destroy()}
 $("#editor_one").html('')
-code_editor_one=textarea_edit("editor_one");setUpOnChangeForEditorOne();code_editor_one.setReadOnly(!1);currently_selected_file_one=$("#file-drop-down-one option:selected").text();code_editor_one.setValue(name_to_body[currently_selected_file_one].toString(),-1)}else if(opt_group==="API"){if(selected.val()==="API Description"){if(code_editor_one!==null){code_editor_one.destroy()}
+code_editor_one=textarea_edit("editor_one");setUpOnChangeForEditorOne();code_editor_one.setReadOnly(!1);currently_selected_file_one=$("#file-drop-down-one option:selected").text();code_editor_one.setValue(name_to_body[currently_selected_file_one].toString(),-1)}else if(opt_group==="API (Not Modifiable)"){if(selected.val()==="API Description"){if(code_editor_one!==null){code_editor_one.destroy()}
 $("#editor_one").html(name_to_body["API Description"])}else if(selected.val()==="API Methods"){if(code_editor_one!==null){code_editor_one.destroy()}
-$("#editor_one").html(name_to_body["API Methods"])}}else if(opt_group==="Example Code"){if(code_editor_one!==null){code_editor_one.destroy()}
+$("#editor_one").html(name_to_body["API Methods"])}}else if(opt_group==="Example Code (Not Modifiable)"){if(code_editor_one!==null){code_editor_one.destroy()}
 $("#editor_one").html('')
-code_editor_one=textarea_edit_example_code("editor_one");code_editor_one.setValue(example_name_to_body[selected.val()],-1);code_editor_one.setReadOnly(!0)}});$('#file-drop-down-two').change(function(){var selected=$(':selected',this);var opt_group=selected.parent().attr('label');if(opt_group==="Question"){if(code_editor_two!==null){code_editor_two.destroy()}
-$("#editor_two").html(name_to_body["Question Description"])}else if(opt_group==="Stub Files"){if(code_editor_two!==null){code_editor_two.destroy()}
+code_editor_one=textarea_edit_example_code("editor_one");currently_selected_file_one = $("#file-drop-down-one option:selected").text();code_editor_one.setValue(example_name_to_body[selected.val()],-1);code_editor_one.setReadOnly(!0)}});$('#file-drop-down-two').change(function(){var selected=$(':selected',this);var opt_group=selected.parent().attr('label');if(opt_group==="Question (Not Modifiable)"){if(code_editor_two!==null){code_editor_two.destroy()}
+$("#editor_two").html(name_to_body["Question Description"])}else if(opt_group==="Stub Files (Modifiable)"){if(code_editor_two!==null){code_editor_two.destroy()}
 $("#editor_two").html('')
-code_editor_two=textarea_edit("editor_two");setUpOnChangeForEditorTwo();code_editor_two.setReadOnly(!1);currently_selected_file_two=$("#file-drop-down-two option:selected").text();code_editor_two.setValue(name_to_body[currently_selected_file_two].toString(),-1)}else if(opt_group==="API"){if(selected.val()==="API Description"){if(code_editor_two!==null){code_editor_two.destroy()}
+code_editor_two=textarea_edit("editor_two");setUpOnChangeForEditorTwo();code_editor_two.setReadOnly(!1);currently_selected_file_two=$("#file-drop-down-two option:selected").text();code_editor_two.setValue(name_to_body[currently_selected_file_two].toString(),-1)}else if(opt_group==="API (Not Modifiable)"){if(selected.val()==="API Description"){if(code_editor_two!==null){code_editor_two.destroy()}
 $("#editor_two").html(name_to_body["API Description"])}else if(selected.val()==="API Methods"){if(code_editor_two!==null){code_editor_two.destroy()}
-$("#editor_two").html(name_to_body["API Methods"])}}else if(opt_group==="Example Code"){if(code_editor_two!==null){code_editor_two.destroy()}
+$("#editor_two").html(name_to_body["API Methods"])}}else if(opt_group==="Example Code (Not Modifiable)"){if(code_editor_two!==null){code_editor_two.destroy()}
 $("#editor_two").html('')
-code_editor_two=textarea_edit_example_code("editor_two");code_editor_two.setValue(example_name_to_body[selected.val()],-1);code_editor_two.setReadOnly(!0)}});function get_all_code_fields(){var return_dict={};var all_file_fields=$('*[id^="file_"]');for(var i=0;i<all_file_fields.length;i++){var curr_element=all_file_fields[i];if(curr_element.id!="file_contents"){return_dict[curr_element.id]=curr_element.value}}
+code_editor_two=textarea_edit_example_code("editor_two");currently_selected_file_two = $("#file-drop-down-two option:selected").text();code_editor_two.setValue(example_name_to_body[selected.val()],-1);code_editor_two.setReadOnly(!0)}});function get_all_code_fields(){var return_dict={};var all_file_fields=$('*[id^="file_"]');for(var i=0;i<all_file_fields.length;i++){var curr_element=all_file_fields[i];if(curr_element.id!="file_contents"){return_dict[curr_element.id]=curr_element.value}}
 return return_dict}
 $('#run_test_case_button').click(function(){$("#test_case_loading").show();$("#test_case_results").html("");var CSRFtoken=$('input[name=csrfmiddlewaretoken]').val();var editor_data=$('#test_case_editor_textarea').val();var data_to_send=get_all_code_fields();data_to_send.test_case_editor=editor_data;data_to_send.csrfmiddlewaretoken=CSRFtoken;$.ajax({type:"POST",url:"/questions/answer/submit_test_case/{{request.resolver_match.kwargs.pk}}/",data:data_to_send,success:function(data){$("#test_case_loading").hide();var test_case_results=data.test_passed;var test_case_output=data.test_results;for(key in test_case_results){if(test_case_results[key]){var row=$('<li class="list-group-item list-group-item-success">'+key+': Passed</li>');$("#test_case_results").append(row)}else{var row=$('<li class="list-group-item list-group-item-danger">'+key+': Failed<br /> '+test_case_output[key]+'</li>');$("#test_case_results").append(row)}}},error:function(data){alert("There was a problem running the test case.")}})});$('#save_code').click(function(){$("#code_saved_status").html("Saving your code...");$("#test_case_results").html("");var CSRFtoken=$('input[name=csrfmiddlewaretoken]').val();var data_to_send={};data_to_send.json_file_contents=JSON.stringify(get_all_code_fields());data_to_send.csrfmiddlewaretoken=CSRFtoken;$.ajax({type:"POST",url:"/questions/answer/save_code/{{request.resolver_match.kwargs.pk}}/",data:data_to_send,success:function(data){if(data.success==!0){$("#code_saved_status").html("Code successfully saved!")}else{$("#code_saved_status").html("There was a problem saving your code")}},error:function(data){$("#code_saved_status").html("There was a problem saving your code")}})});function setUpScreen(){window.onerror=function(errorMsg,url,lineNumber,column,errorObj){if(errorMsg.indexOf("Uncaught TypeError")==-1){console.error(errorMsg)}
 return!0}
-code_editor_one.destroy();$("#editor_one").html(name_to_body["Question Description"]);code_editor_two.destroy();$("#editor_two").html(name_to_body["Question Description"])}
+code_editor_one.destroy();$("#editor_one").html(name_to_body["Question Description"]);code_editor_two = textarea_edit("editor_two");setUpOnChangeForEditorTwo();code_editor_two.setReadOnly(false);currently_selected_file_two = $("#file-drop-down-two option:selected").text();code_editor_two.setValue(name_to_body[currently_selected_file_two].toString(), -1);}
 function startTimer(duration,display){var start=Date.now(),diff,hours,minutes,seconds;function timer(){diff=duration-(((Date.now()-start)/1000)|0);hours=(diff/3600)|0;minutes=((diff/60)%60)|0;seconds=(diff%60)|0;hours=hours<10?"0"+hours:hours;minutes=minutes<10?"0"+minutes:minutes;seconds=seconds<10?"0"+seconds:seconds;display.textContent="Remaining Time: "+hours+":"+minutes+":"+seconds;if(diff<=0){$("#question_answer").submit()}};timer();setInterval(timer,1000)}
 window.onload=function(){$("#test_case_loading").hide();setUpScreen();var is_preview="{{ is_preview|safe }}";var has_expiration="{{ has_expiration|safe }}";if(is_preview==="False"){if(has_expiration!=="False"){var time={{expiration_time|safe}};var display=document.querySelector('#remaining_time');startTimer(time,display)}}};$('#zip_file').on('change',function(){$('#file_name_field').val($(this).get(0).files.item(0).name)});$('#file_span').on('click',function(){$('#file_name_field').val($('#zip_file').val())});$(document).on("keydown",":input:not(textarea)",function(event){return event.key!="Enter"})
 </script>
