--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -210,6 +210,7 @@
 to the user with a @visible @not_visible annotation</span>
 
 <span style="color: #008000"># all test cases should be written in this class</span>
+<span style="color: #008000"># all test methods must begin with the prefix test_</span>
 <span style="color: #0000ff">class</span> <span style="color: #2b91af">TestCases</span>(unittest.TestCase):
     @visible
     <span style="color: #0000ff">def</span> test_user_submitted_file(self):
