--- a/frontend_templates/interview_q/open.html
+++ b/frontend_templates/interview_q/open.html
@@ -25,7 +25,7 @@
                             {% for question in questions %}
                                 <tr>
                                 <th scope="row">{{start_count|add:forloop.counter}}</th>
-                                <td><a href="/interview_questions/{{question.pk}}/try/">{{question.name}}</a></td>
+                                <td><a href="/interview_questions/question/{{question.pk}}/try/">{{question.name}}</a></td>
                                 <td>{{ question.description}}</td>
                                 </tr>
                             {% endfor %}
