network and dependency imports

--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -69,6 +69,8 @@
                             <h2 class="step-title">Step 2: Write Your Supporting Code</h2><br />
                     </div>
                     <div class="col-md-6">
+                        <label class="centered code-label">Upload a requirements.txt file (Visible to users)</label> <br />
+                        <input class="centered" type="file" id="requirements_file" name="requirements_file" accept=".txt">
                         <div class="form-group, step">
                         <label class="centered code-label">Supporting Code (Not visible to users)</label> <br />
                         <div id="supporting_fields">
