allow stdout tests

--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -53,6 +53,12 @@
                                         Enable Network For This Question? <br /> We normally disable network access to best protect your supporting code.                               </label>
                             </div>
                             <br/>
+                            <div class="form-check">
+                                <input class="form-check-input checkbox-style" type="checkbox" id="allow_stdout" name="allow_stdout">
+                                <label class="form-check-label checkbox-label" for="allow_stdout">
+                                        Enable The User To Print During User Tests<br /> We normally disable this so they cannot try and inspect your library and supporting code.                              </label>
+                            </div>
+                            <br/>
                         </div>
                     </div>
                     <div class="col-md-6">
