--- a/frontend_templates/interview_q_instance/answer.html
+++ b/frontend_templates/interview_q_instance/answer.html
@@ -113,6 +113,7 @@
           <button type="submit" name="action" value="submit_code" class="btn btn-success btn-lg centered-button">Submit Code</button>
           <button type="button" name="save_code" id="save_code" class="btn btn-info btn-lg">Save Code</button><br />
           <p id="code_saved_status"></p>
+          <p>Be sure to write test cases below before submitting!</p>
         </center>  
       </div>
       {% endif %}
