--- a/frontend_templates/info/about.html
+++ b/frontend_templates/info/about.html
@@ -18,9 +18,11 @@
         <div class="row">
           <div class="col-md-8">
             <h2 class="section-header">About Us</h2>
-            <p class="section-body">Encompass Interviews is an online platform leading the charge to change the way technical programming interview questions are done. We believe that the current way that programming interviews are done, primarily through algorithm based interviews, do not stress skills that are important in an actually programming job. This leads to low signal for the company and high stress for the applicant.
-               We attempt to change this by offering different types of questions on our platform that stress skills such as reading existing code, using APIs, and solving implementation challenges.
-               We are taking the first step to removing an obstacle that stops developers from getting their dream job.
+            <p class="section-body">Encompass Interviews is an online platform leading the charge to change the way 
+              technical programming interview questions are done. We believe that the current way that programming interviews are done, 
+              primarily through algorithm based interviews, do not stress skills that are important in an actual programming job. 
+              This leads to a poor signal for the company and high stress for the applicant. We attempt to change this by offering different types of questions on 
+              our platform that stress skills such as reading existing code, using APIs, and solving implementation challenges.
             </p>
           </div>
           <div class="col-md-4">
@@ -41,7 +43,7 @@
         <hr />
         <div class="row">
           <div class="col-md-12">
-            <h2 class="section-header">Contact Us</h2>
+            <h2 class="section-header centered">Contact Us</h2>
             <p class="contact-body">You can email us at <a href = "mailto: support@encompassinterviews.com">support@encompassinterviews.com</a>
             </p>
           </div>
