--- a/frontend_templates/interview_q/all.html
+++ b/frontend_templates/interview_q/all.html
@@ -11,17 +11,17 @@
              {% if user.is_authenticated %}
                 <h1 class="page-title">Your Interview Questions:</h1>
                 </section>
-                <div class="container">
+                <div class="container-questions">
                     <div class="row">
                         {% for interview_q in interview_questions %}
-                            <div class="col-md-4">
-                                <div class="card mb-4 box-shadow">
+                            <div class="col-md-3">
+                                <div class="card mb-3 box-shadow">
                                 <div class="card-body question-box">
                                     <p class="card-text question-card-title">{{ interview_q.name }}</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-toolbar">
                                             <a href="/interview_questions/question/{{interview_q.id}}/send/" class="btn btn-outline-primary question-card-button">Send</a>
-                                            <a href="/interview_questions/question/{{interview_q.id}}/submissions/" class="btn btn-outline-primary question-card-button">Submissions</a>
+                                            <a href="/interview_questions/question/{{interview_q.id}}/submissions/" class="btn btn-outline-primary question-card-button">View Submissions</a>
                                         </div>
                                         <div class="btn-toolbar">
                                             <a href="/interview_questions/question/{{interview_q.id}}/edit/" class="btn btn-outline-primary question-card-button">Edit</a>
